# js-macros

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: custom_attribute.rs  custom_derive.rs  custom_function.rs
js-macros/: custom_attribute.ts  custom_derive.ts  custom_function.ts
src/: lib.rs
