[package]
name = "js-macros"
version = "0.1.0"
authors = ["Vultix"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vultix/js-macros"
readme = "README.md"
description = "Quickly prototype procedural macros using JavaScript or TypeScript!"
keywords = ["proc_macro", "javascript", "typescript", "macros"]
categories = ["development-tools::procedural-macro-helpers"]
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
proc-macro-error = "1"

[build-dependencies]
regex = "1"
anyhow = "1"
